<resources>
    <string name="app_name">AndroidAcademy</string>
    <string name="name">Igor Smirnov</string>

    <string name="NULL" translatable="false">NULL</string>

    <string name="bmstu">BMSTU</string>
    <string name="android_academy">Android Academy</string>
    <string name="atlant">HC Atlant</string>
    <string name="desc" translatable="false">Игорь является начинающим Android-разработчиком. Совмещает самообучение и учебу в МГТУ им. Н.Э. Баумана. Любимыми языками программирования Игорь называет Java и C/C++. Также является активным фанатом хоккейного клуба Атлант (Московская Область). Если у вас есть замечания или предложения по используемому приложению, вы всегда можете с ним связаться с помощью формы ниже. Если вы обнаружите какие-либо проблемы или просто хотите сказать "Привет", обязательно пишите!</string>
    <string name="send">send message</string>
    <string name="enter">Enter a message...</string>

    <!-- Content Description -->
    <string name="desc_igor">Igor Avatar</string>
    <string name="desc_mbstu">BMSTU Icon</string>
    <string name="desc_academy">Android Academy icon</string>
    <string name="desc_atlant">Atlant icon</string>
    <string name="desc_vk" translatable="false">VK</string>
    <string name="desc_telegram" translatable="false">Telegram</string>

    <string name="feedback">Feedback</string>
    <string name="notFoundEmailActiviy">Not found activity for Email</string>
    <string name="urlGooglePlusAccount" translatable="false">https://plus.google.com/u/0/101741358658381124829</string>
    <string name="urlVKAccount" translatable="false">https://vk.com/igorsmirnov0</string>
    <string name="hello">Hello</string>

    <string name="news">News</string>
    <string name="menuItemAbout">About</string>
    <string name="newsImage">News image</string>

    <!-- Alert Dialog -->
    <string name="loading">Please wait. Loading ...</string>
    <string name="errorLoading">Error which loading :(</string>

    <!-- Sample data -->
    <string name="sampleCategory" translatable="false">Criminal</string>
    <string name="sampleTitle" translatable="false">Police warn daredevil cliff jumpers who are \'risking their lives for likes\'</string>
    <string name="samplePreview" translatable="false">Police in Los Angeles say they are spending hundreds of thousands of dollars airlifting cliff jumpers out of dangerous spots.</string>
    <string name="menuItemExit">Exit</string>
    <string name="menuItemTest">Test</string>
    <string name="reconnect">Reconnect</string>
    <string name="menuItemSpinner" translatable="false">spinner</string>
    <string name="welcome" translatable="false">Welcome!</string>
    <string name="delete">Delete</string>
    <string name="editCategory">Edit category</string>
    <string name="update">Update</string>
    <string name="search_hint">Search</string>
    <string name="editTitle">Edit title</string>
    <string name="editPreview">Edit preview</string>
    <string name="successfulLoading">Successful loading</string>
    <string name="skip">Skip</string>
</resources>
