<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/igor_smirnov"
            android:contentDescription="@string/name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/stdPadding"
            android:layout_marginStart="@dimen/stdPadding"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/stdPadding">

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_bmstu"
                    android:contentDescription="@string/desc_igor"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_text"
                    android:paddingEnd="@dimen/stdPadding"
                    android:paddingStart="@dimen/stdPadding"
                    android:text="@string/bmstu"
                    android:textSize="@dimen/stdTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/stdPadding">

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_android_academy"
                    android:contentDescription="@string/desc_academy"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/stdPadding"
                    android:paddingStart="@dimen/stdPadding"
                    android:text="@string/android_academy"
                    android:textSize="@dimen/stdTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/stdPadding">

                <ImageView
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_atlant"
                    android:contentDescription="@string/desc_atlant"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/stdPadding"
                    android:paddingStart="@dimen/stdPadding"
                    android:text="@string/atlant"
                    android:textSize="@dimen/stdTextSize" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stdBorderWidth"
                android:backgroundTint="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="@dimen/stdPadding"
                android:text="@string/desc"
                android:textSize="@dimen/stdTextSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stdBorderWidth"
                android:backgroundTint="@color/colorAccent" />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/enter"
                android:inputType="text"/>

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/send"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/stdPadding">
                <ImageButton
                    android:id="@+id/buttonVK"
                    android:layout_width="@dimen/stdButtonSize"
                    android:layout_height="@dimen/stdButtonSize"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_vk"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_vk"/>

                <ImageButton
                    android:id="@+id/buttonGoogle"
                    android:layout_width="@dimen/stdButtonSize"
                    android:layout_height="@dimen/stdButtonSize"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_googleplus"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_telegram"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>